# pyspark-etl-patterns

./: pyproject.toml
config/: data_quality_rules.yaml  pipeline_config.yaml
data/input/: customers.csv  employees.csv  orders.csv  products.csv  transactions.json
src/factories/: spark_factory.py
src/transforms/: aggregation.py
